--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-vue": "^0.5.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
