--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rive-app/react-canvas": "^4.16.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
